# Lanzarini-Validation-Suite

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt  v1d_runtime_benchmark.py
.github/workflows/: v2_repository_quality.yml  validation-suite-check.yml
artifacts/: README.md
artifacts/csv/: Add v1d_runtime_smoke_rows.csv  v1c_micro_correctness_rows.csv  v1e_artifact_manifest.csv
artifacts/json/: v1a_environment_report.json  v1b_adapter_contract_report.json  v1b_r_correctness_report.json  v1c_lite_runtime_report.json  v1c_micro_correctness_report.json  v1d_lite_energy_report.json  v1d_runtime_smoke_report.json  v1e_artifact_manifest.json  v1e_artifact_manifest_audit_report.json  v1f_fast_frontier_report.json  v1f_validation_report.json
docs/: ADAPTER_INTERFACE.md  BENCHMARK_SCOPE.md  COMPLEXITY.md  CORRECTNESS.md  LIMITATIONS.md  README.md  SPECIFICATION.md  VALIDATION_METHOD.md
examples/: README.md
figures/: README.md
json/: v1a_environment_report.json
paper/: ABSTRACT.md  CLAIM_LEDGER.md  CONCLUSION.md  DISCUSSION.md  INTRODUCTION.md  METHOD.md  PROJECT_STATUS.md  README.md  REFERENCES.md  RELATED_WORK.md  RESULTS.md  V2_VALIDATION_PLAN.md  VALIDATION_OVERVIEW.md
paper/results/: V42D-A-R.md  V43A.md  V44A-2M.md  V48A-2R.md  V52D-R2-FIX.md  V56G-R.md  V56H-LOCK.md  V56I-LOCK.md  V57C.md  V58A.md  V58B.md  V59A.md  (+2 more)
reports/: EVIDENCE_MATRIX.md  PUBLIC_BENCHMARKS.md  PUBLIC_RESEARCH_RESULTS.md  README.md
scripts/: README.md
(+31 files in other folders)
